3-1 실습 :: test 코드 import 확인 및 deprecated 코드 최신화